# lem_in

./: CMakeLists.txt  Makefile  author  correction.sh  lem-in  output_difference.txt  test
Result/: -dev-urandom
includes/: lem_in.h
libft/: Makefile  author
libft/includes/: ft_printf.h  get_next_line.h  libft.h  sort_algs.h
libft/src/: get_next_line.c
libft/src/ft_array/: ft_get_number_of_substrings.c  ft_print_int_arr.c  ft_print_ll_arr.c  ft_print_pstr_arr.c  ft_print_sizet_arr.c  ft_print_str_arr.c
libft/src/ft_lst/: ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c
libft/src/ft_math/: ft_abs.c  ft_log2n.c  ft_max_of_three.c  ft_max_of_two.c  ft_middle_of_three.c  ft_min_of_two.c
libft/src/ft_mem/: ft_bzero.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c
libft/src/ft_num/: ft_atoi.c  ft_atol.c  ft_atoul.c  ft_copy_int_arr.c  ft_num_of_digits.c  ft_num_of_fields.c  ft_unnum_of_fields.c
libft/src/ft_printf/: alignment.c  calc_float_width.c  calc_signed_precision.c  calc_signed_width.c  calc_unsigned_precision.c  calc_unsigned_width.c  check_conventions.c  flag_cs.c  flag_di.c  flag_f.c  flag_f_handle.c  flag_o.c  flag_p.c  flag_percent.c  utils.c  (+23 more)
map_test/: no_path.map  test2.map  test4.map  test5.map
maps/: 1000.map  10K.map  error_0_empty_line.map  error_10_no_start.map  error_11_other_char.map  error_13_room_in_tube.map  error_14_tube_before_room.map  error_15_tube_in_room.map  error_16_room_start_L.map  error_17_room_start_#.map  error_18_no_room.map  error_19_no_tube.map  error_1_first_empty_line.map  error_20_numbers-of-minus.map  error_21_numbers-of-space.map  error_2_float.map  error_3_format_room.map  error_4_format_tube.map  error_5_format_separator_room.map  error_6_format_separator_tube.map  error_7_no_end.map  error_9_no_path.map  sujet_0_inline.map  sujet_10_bad_tube.map  sujet_11_unknown_command.map  sujet_2_8_rooms.map  sujet_3_2_equals_pathes.map  sujet_4_direct_start_to_end.map  sujet_5_to_big_and_to_short_path.map  sujet_6_empty_line.map  sujet_7_comment.map  sujet_8_tube_with_inexistent_room.map  sujet_9_tube_with_inexistent_tube.map  test.map  test2.map
src/: ants.c  bfs.c  copy_lines.c  free_data.c  free_data2.c  get_info.c  handle_errors.c  hashmap  hashmap.c  init_structs.c  lem_in.c  link_optimization.c  path_creating.c  printing.c  printing2.c  queue.c  read_map.c  room_utils.c  validation.c
(+61 files in other folders)
